--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+body{
+    margin:0px;
+}
+
 #box{
-    padding: 0px 200px 0px 200px;
+    padding: 0px 250px 0px 250px;
 }
 
 .header, .hero-container{
@@ -22,13 +26,32 @@
     display:flex;
     justify-content:space-between; 
     align-items:center;
-    height:300px;
+    height:500px;
+    
+}
+
+.hero-text{
+    width:500px;
 }
 
 .hero-img{
+    color:#E5E7EB;
     background-color: gray;
-    height: 200px;
-    width:400px
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    height: 300px;
+    width:600px
+}
+
+.register-button{
+    background-color:#3882F6;
+    border:0px;
+    border-radius:10px;
+    height:50px;
+    width:150px;
+    color:#E5E7EB;
+    font-size:18px;
 }
 
 a{
@@ -37,6 +60,46 @@ a{
     font-size: 18px;
 }
 
+
+
+.image-container{
+    display:flex;
+    justify-content:space-around;
+    padding:0px 200px 0px 200px;
+}
+
+.image-box{
+    border:#3882F6 solid 3px;
+    border-radius: 10px;
+    height:150px;
+    width:150px;
+}
+
+.img-caption{
+    width: 150px;
+    text-align:center;
+}
+
 .quote-container{
     background-color:#E5E7EB;
+    
+}
+
+.quote{
+    color:#1F2937;
+    font-size:36px;
+    font-style:italic;
+    width:auto;
+    display:flex;
+    justify-content: center;
+    padding:0px 200px 0px 200px;
+}
+
+.quoter{
+    color:#1F2937;
+    font-size:36px;
+    font-weight:bold;
+    display:flex;
+    justify-content: flex-end;
+    padding: 0px 200px 0px 0px;
 }
