--- a/styles.css
+++ b/styles.css
@@ -60,29 +60,41 @@ a{
     font-size: 18px;
 }
 
-
+.container2-text{
+    color:#1F2937;
+    font-size:36px;
+    font-weight:900;
+    text-align:center;
+    padding:70px 0px 0px 0px;
+    margin:0px;
+}
 
 .image-container{
     display:flex;
     justify-content:space-around;
     padding:0px 200px 0px 200px;
+    height:500px;
+    align-items:center;
 }
 
 .image-box{
     border:#3882F6 solid 3px;
     border-radius: 10px;
-    height:150px;
-    width:150px;
+    height:200px;
+    width:200px;
 }
 
 .img-caption{
-    width: 150px;
+    width: 200px;
     text-align:center;
 }
 
 .quote-container{
     background-color:#E5E7EB;
-    
+    height:500px;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
 }
 
 .quote{
@@ -102,4 +114,39 @@ a{
     display:flex;
     justify-content: flex-end;
     padding: 0px 200px 0px 0px;
+}
+
+.action-container{
+    height:300px;  
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-box{
+    display:flex;
+    flex-basis:1200px;
+    background-color:#3882F6;
+    border-radius: 10px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.action-button{
+    background-color:#3882F6;
+    border:white solid 2px;
+    border-radius:10px;
+    height:50px;
+    width:150px;
+    color:#E5E7EB;
+    font-size:18px;
+}
+
+.footer{
+    width:auto;
+    background-color:#1F2937;
+    height:75px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
